sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: not found: value getValeurs
		var v=getValeurs(i)
                      ^AlgInsertionSort:7: error: not enough arguments for method setValeur: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
			if (!plusPetitQue(k,v)) {setValeur(v)}
                                                          ^